--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     	<input type="text" name="u" placeholder="Username" required="required" />
         <input type="password" name="p" placeholder="Password" required="required" />
 		<input type="text" name="p" placeholder="Abhishek" required="required" />
+		<input type="text" name="p" placeholder="Vinay" required="required" />
         <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
     </form>
 </div>
