--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <form method="post">
     	<input type="text" name="u" placeholder="Username" required="required" />
         <input type="password" name="p" placeholder="Password" required="required" />
-		<input type="text" name="p" placeholder="Abhishek" required="required" />
-        <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
+        <input type="password" name="p" placeholder="confirm password" required="required" />
+        <button type="submit" class="btn btn-primary btn-block btn-large">submit.</button>
     </form>
 </div>
 
